fixed dark mode ui. added moving company logo in an infinite loop.

--- a/InternBano/src/index.css
+++ b/InternBano/src/index.css
@@ -177,3 +177,69 @@ Global font
   background-color: #1f2933;
   color: #f9fafb;
 }
+
+/* @keyframes marquee {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-marquee {
+  animation: marquee 20s linear infinite;
+}
+
+.marquee-fade::before,
+.marquee-fade::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  width: 80px;
+  height: 100%;
+  z-index: 10;
+}
+
+.marquee-fade::before {
+  left: 0;
+  background: linear-gradient(to right, #000, transparent);
+}
+
+.marquee-fade::after {
+  right: 0;
+  background: linear-gradient(to left, #000, transparent);
+} */
+
+
+.marquee-item {
+    @apply md:w-40 w-32;
+}
+
+/* marquee */
+.marquee {
+  width: 100dvw;
+  overflow: hidden;
+  position: relative;
+}
+.marquee-box {
+  display: flex;
+  align-items: center;
+  width: 200%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  animation: marquee 25s linear infinite;
+}
+.marquee-item {
+  float: left;
+}
+@keyframes marquee {
+  0% {
+    left: 0;
+  }
+  100% {
+    left: -100%;
+  }
+}
+/* marquee end */
